[update] Refactor code for improved readability and functionality across multiple classes - Updated Maven compiler version to 11 - Modified main method signature in Main.java - Enhanced input validation in RentalController.java methods - Replaced deprecated toList() with collect(Collectors.toList()) in various classes - Improved UI component labels and layout in EquipmentPanel.java and RentalPanel.java